:iphone: Add responsive design
Add responsive design to card

--- a/index.html
+++ b/index.html
@@ -35,19 +35,23 @@
           <h1>Order Summary</h1>
 
           <p>
-            You can now listen to millions of <br />
-            songs, audiobooks, and podcasts on <br />
+            You can now listen to millions of songs, audiobooks, and podcasts on
             any device anywhere you like!
           </p>
 
           <div class="plan-container">
             <div class="plan-content">
-              <img src="./images/icon-music.svg" alt="Music Icon" />
+              <div class="plan-info-container">
+                <img
+                  class="icon-music"
+                  src="./images/icon-music.svg"
+                  alt="Music Icon"
+                />
+                <div class="plan-info-content">
+                  <p class="plan-type">Annual Plan</p>
 
-              <div class="plan-info">
-                <span class="plan-type">Annual Plan</span>
-
-                <span class="plan-value">$59.99/year</span>
+                  <p class="plan-value">$59.99/year</p>
+                </div>
               </div>
 
               <a class="btn-change" href="#">Change</a>
