:dizzy: Add animations

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="card-container">
+      <div class="card-container slide-in-blurred-top">
         <div class="card-content">
           <img class="hero-image" src="./images/illustration-hero.svg" alt="" />
 
@@ -66,7 +66,7 @@
     </div>
 
     <footer>
-      <div class="attribution tracking-in-expand">
+      <div class="attribution focus-in-expand">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
